added new rwvies, removed defer form corousel script tag

--- a/src/components/SlideshowEventList1Img.astro
+++ b/src/components/SlideshowEventList1Img.astro
@@ -88,7 +88,7 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
   </button>
 </div>
 
-<script defer>
+<script>
   // Select all slides
   const slides = document.querySelectorAll(".slide-mobile");
 
