--- a/src/components/SlideshowEventList1ImgEmpty.astro
+++ b/src/components/SlideshowEventList1ImgEmpty.astro
@@ -18,8 +18,8 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     <div class="slide-mobile">
         <div class="slide-text">
             <div>
-                <p>Zu Elena gehe ich immer sehr gerne in die Massage. Die Session ist professionell, einfühlsam und Elena ist auch immer für einen Quatsch zu haben, und findet immer die richtige Mischung von Stille, Massage und Gespräch. Ich schätze Elena sehr und freue mich jeweils auf die Massage.</p>
-                <ButtonGrey href="/contacts/#personal-contact" text="BEWERTUNG SCHREIBEN" />
+                <p>Hier könnten Ihre Bewertungen sein.</p>
+                <!-- <ButtonGrey href="/contacts/#personal-contact" text="BEWERTUNG SCHREIBEN" /> -->
             </div>
             
         </div>
