--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,7 @@ const { title } = Astro.props;
 			gtag('config', 'G-9717MC8CP7');
 		</script>
 
+		<meta name="google-site-verification" content="TnwaOeSXw3TtoT0BGTQeb_Zvsjim1U1u-7QSdp6s1Ic" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
