Added meta tags with descriptions, key words, title

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import Footer from "../components/Footer.astro";
 import SlideshowEventList from "../components/SlideshowEventList.astro";
 ---
 
-<Layout title="VitaLena">
+<Layout title="VitaLena Massage">
     <main>
         <Banner />
         <div class="aboutme">
