--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import ButtonGrey from "../components/ButtonGrey.astro"
 import { Icon } from "astro-icon";
 ---
 
-<Layout title="VitaLena">
+<Layout title="VitaLena Massage">
 	<main>
 		<BannerHome />
 		<!-- contacts -->
