--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -6,7 +6,7 @@ import CardMassageReverse from "../components/CardMassageReverse.astro";
 import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="VitaLena">
+<Layout title="VitaLena Massage">
   <main>
     <Banner />
     <div class="massage">
