--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,6 +24,8 @@ const { title } = Astro.props;
 
 		<meta name="google-site-verification" content="TnwaOeSXw3TtoT0BGTQeb_Zvsjim1U1u-7QSdp6s1Ic" />
 		<meta charset="UTF-8" />
+		<meta name="description" content="Massage neben Zurich - von Entspannung bis Heilen">
+  		<meta name="keywords" content="massage, zurich, kloten, weiach">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
