--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon";
 import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
 ---
 
-<Layout title="VitaLena">
+<Layout title="VitaLena Massage">
     <main>
         <Banner />
         <div class="contacts">
