added a 6th review to the web sote

--- a/src/components/SlideshowEventList1Img.astro
+++ b/src/components/SlideshowEventList1Img.astro
@@ -79,6 +79,16 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
   </div>
 
+  <!-- slide 6 -->
+  <div class="slide-mobile">
+    <div class="slide-text">
+      <p>
+        Liebe Elena. Deine (fast) wöchentliche Massagen sind meine Rettung für meinen verspannten Oberkörper. Vorallem meine Schultern sind vom Sport so verkrampft. Nach deiner Massage fühle ich mich tausend mal entspannter und seitdem ich mich bei dir massieren lasse, habe ich weniger Schmerzen und kann so noch mehr Sport machen :D Letztens hast du eine Verklemmung im Nacken-Schulterbereich weggezaubert! Vielen Vielen Dank für deine magischen Hände und dass du immer auf meine Wehwehchen schaust :)
+      </p>
+      <p>- Nguyen, 1. Septmber 2023</p>
+    </div>
+  </div>
+
   <!-- Control buttons -->
   <button class="btn-m btn-next-m">
     <Icon name="fa-solid:chevron-right" class="btn-icon" />
