--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -56,10 +56,9 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
         </div>
         <div class="slide-text">
             <p>
-              Meine kleine Auszeit bei Elena geniesse ich immer sehr! Sie hat mir
-              durch ihre zielgerichtete Massage schon oft den Gang zum Chiropraktiker
-              erspart, dafür bin ich sehr dankbar.
-            <p>- Imke, 25. Mai 2023</p>
+              Liebe Elena. Deine (fast) wöchentliche Massagen sind meine Rettung für meinen verspannten Oberkörper. Vorallem meine Schultern sind vom Sport so verkrampft. Nach deiner Massage fühle ich mich tausend mal entspannter und seitdem ich mich bei dir massieren lasse, habe ich weniger Schmerzen und kann so noch mehr Sport machen :D 
+              <p>Letztens hast du eine Verklemmung im Nacken-Schulterbereich weggezaubert! Vielen Vielen Dank für deine magischen Hände und dass du immer auf meine Wehwehchen schaust :)</p>
+            <p>- Nguyen, 1. Septmber 2023</p>
         </div>
         <div class="slide-text-empty">
             <p>
