--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -34,13 +34,13 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
                             <img
                                 src="/img/about-room2-opt.jpeg"
                                 alt=""
-                                width="350"
+                                width="250"
                                 class="room-photo"
                             />
                             <img
-                                src="/img/about-room3-opt.jpg"
+                                src="/img/about-room8.jpg"
                                 alt=""
-                                width="350"
+                                width="250"
                                 class="room-photo"
                             />
                         </div>
@@ -53,7 +53,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
                     slideImg1="/img/about-person-opt.jpg"
                     slideImg2="/img/about-process.jpg"
                     slideImg3="/img/about-room2-opt.jpeg"
-                    slideImg4="/img/about-room3-opt.jpg"
+                    slideImg4="/img/about-room7.jpg"
                 />
             </div>
 
@@ -203,7 +203,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
     }
 
     .studio-photos img {
-        width: 250px;
+        /* width: 250px; */
     }
 
     .slide-show {
