added revies to tablet and mobile versions

--- a/src/components/SlideshowEventList2Img.astro
+++ b/src/components/SlideshowEventList2Img.astro
@@ -57,6 +57,51 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
   </div>
 
+  <!-- slide 3 -->
+  <div class="slide-tablet">
+    <div class="slide-text">
+      <p>
+        Meine kleine Auszeit bei Elena geniesse ich immer sehr! Sie hat mir
+        durch ihre zielgerichtete Massage schon oft den Gang zum Chiropraktiker
+        erspart, dafür bin ich sehr dankbar.
+      </p>
+      <p>- Imke, 25. Mai 2023</p>
+    </div>
+    <div class="slide-text">
+      <p>
+        Liebe Elena. Deine (fast) wöchentliche Massagen sind meine Rettung für
+        meinen verspannten Oberkörper. Vorallem meine Schultern sind vom Sport
+        so verkrampft. Nach deiner Massage fühle ich mich tausend mal
+        entspannter und seitdem ich mich bei dir massieren lasse, habe ich
+        weniger Schmerzen und kann so noch mehr Sport machen :D Letztens hast du
+        eine Verklemmung im Nacken-Schulterbereich weggezaubert! Vielen Vielen
+        Dank für deine magischen Hände und dass du immer auf meine Wehwehchen
+        schaust :)
+      </p>
+      <p>- Nguyen, 1. Septmber 2023</p>
+    </div>
+  </div>
+
+  <!-- slide 4 -->
+  <div class="slide-tablet">
+    <div class="slide-text">
+      <p>
+        Ohne die Massagen bei Elena kann ich es mir nicht mehr vorstellen: mit
+        ihrer grosser Erfahrung löst sie immer meine Verspannungen und trägt
+        dank einer angenehmen Atmosphäre sehr zu meiner Entspannung bei.
+      </p>
+      <p>- Sara, 24. Oktober 2023</p>
+    </div>
+    <div class="slide-text">
+      <p>
+        Meine kleine Auszeit bei Elena geniesse ich immer sehr! Sie hat mir
+        durch ihre zielgerichtete Massage schon oft den Gang zum Chiropraktiker
+        erspart, dafür bin ich sehr dankbar.
+      </p>
+      <p>- Daniela, 21. December 2023</p>
+    </div>
+  </div>
+
   <!-- Control buttons -->
   <button class="btn-p btn-next-p">
     <Icon name="fa-solid:chevron-right" class="btn-icon" />
