--- a/src/components/SlideshowEventList2Img.astro
+++ b/src/components/SlideshowEventList2Img.astro
@@ -94,9 +94,12 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
     <div class="slide-text">
       <p>
-        Meine kleine Auszeit bei Elena geniesse ich immer sehr! Sie hat mir
-        durch ihre zielgerichtete Massage schon oft den Gang zum Chiropraktiker
-        erspart, dafür bin ich sehr dankbar.
+        Seit langer Zeit lasse ich mich wöchentlich von meinen Verspannungen
+        erlösen, die sich aufgrund meiner PC-Arbeit ergeben. Elena geht auf
+        meine Wünsche ein und kümmert sich auch um meinen Muskelkater, wenn ich
+        zu lange mit dem Joggen aufgehört habe. Ich vermisse die Behandlungen,
+        wenn sie wegen Ferien oder Krankheit ausfallen. Elena, vielen Dank für
+        Deine Massagen und auch die Gespräche. Bis im Neuen Jahr, ich freue mich
       </p>
       <p>- Daniela, 21. December 2023</p>
     </div>
