--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -98,8 +98,10 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
       </p>
       <p>- Daniela, 21. December 2023</p>
     </div>
-    <div class="slide-text no-review">
-      <p>Hier könnte Ihre Bewertung sein.</p>
+    <div class="slide-text">
+      <p>Ich bin dankbar für Elenas Hände, ihren Spirit und Können 🌺 man/frau kriecht rein und fliegt neu geboren raus 🌺
+        Danke Elena, wunderbar kann ich mich so nah unter deine Hände geben 🏆</p>
+      <p>- Nicole, 24. Januar 2024</p>
     </div>
   </div>
 
