--- a/src/components/SlideshowEventList1Img.astro
+++ b/src/components/SlideshowEventList1Img.astro
@@ -123,6 +123,18 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
   </div>
 
+  <!-- slide 9 -->
+  <div class="slide-mobile">
+    <div class="slide-text">
+      <p>
+        Ich bin dankbar für Elenas Hände, ihren Spirit und Können 🌺 man/frau
+        kriecht rein und fliegt neu geboren raus 🌺 Danke Elena, wunderbar kann
+        ich mich so nah unter deine Hände geben 🏆
+      </p>
+      <p>- Nicole, 24. Januar 2024</p>
+    </div>
+  </div>
+
   <!-- Control buttons -->
   <button class="btn-m btn-next-m">
     <Icon name="fa-solid:chevron-right" class="btn-icon" />
