--- a/src/components/SlideshowEventList1Img.astro
+++ b/src/components/SlideshowEventList1Img.astro
@@ -135,6 +135,21 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
   </div>
 
+  <!-- slide 10 -->
+  <div class="slide-mobile">
+    <div class="slide-text">
+      <p>
+        Als Bildschirmarbeiter habe ich sehr häufig mit einer verspannten
+        Nacken- und Schulterpartie zu kämpfen. Elena kann diese Verspannungen
+        lösen und hilft mir dabei sehr, in den Tagen nach der Massage
+        schmerzfrei zu sein. Dank Ihrer Erfahrung und den vielen Techniken, die
+        Elena beherrscht, kommt sie gut und einfühlsam an die Quellen der
+        Verspannungen und kann sie lösen. Ich bin sehr dankbar für Ihre Hilfe.
+      </p>
+      <p>- Dirk, 14. März 2024</p>
+    </div>
+  </div>
+
   <!-- Control buttons -->
   <button class="btn-m btn-next-m">
     <Icon name="fa-solid:chevron-right" class="btn-icon" />
