2 new revies added

--- a/src/components/SlideshowEventList1Img.astro
+++ b/src/components/SlideshowEventList1Img.astro
@@ -150,6 +150,19 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
   </div>
 
+  <!-- slide 11 -->
+  <div class="slide-mobile">
+    <div class="slide-text">
+      <p>
+        Liebe Elena, ich freue mich auf jeden Termin bei Dir. Die Entspannung
+        beginnt mit der fröhlichen Begrüssung. Die Zeit in der Massage ist eine
+        willkommene Oase im Arbeitsalltag, die Massage sehr professionell,
+        abwechslungsreich und entspannend. Immer gerne wieder!
+      </p>
+      <p>- Martin, 25. März 2024</p>
+    </div>
+  </div>
+
   <!-- Control buttons -->
   <button class="btn-m btn-next-m">
     <Icon name="fa-solid:chevron-right" class="btn-icon" />
