--- a/src/components/SlideshowEventList2Img.astro
+++ b/src/components/SlideshowEventList2Img.astro
@@ -115,6 +115,30 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
       </p>
       <p>- Nicole, 24. Januar 2024</p>
     </div>
+    <div class="slide-text">
+      <p>
+        Als Bildschirmarbeiter habe ich sehr häufig mit einer verspannten
+        Nacken- und Schulterpartie zu kämpfen. Elena kann diese Verspannungen
+        lösen und hilft mir dabei sehr, in den Tagen nach der Massage
+        schmerzfrei zu sein. Dank Ihrer Erfahrung und den vielen Techniken, die
+        Elena beherrscht, kommt sie gut und einfühlsam an die Quellen der
+        Verspannungen und kann sie lösen. Ich bin sehr dankbar für Ihre Hilfe.
+      </p>
+      <p>- Dirk, 14. März 2024</p>
+    </div>
+  </div>
+
+  <!-- slide 6 -->
+  <div class="slide-tablet">
+    <div class="slide-text">
+      <p>
+        Liebe Elena, ich freue mich auf jeden Termin bei Dir. Die Entspannung
+        beginnt mit der fröhlichen Begrüssung. Die Zeit in der Massage ist eine
+        willkommene Oase im Arbeitsalltag, die Massage sehr professionell,
+        abwechslungsreich und entspannend. Immer gerne wieder!
+      </p>
+      <p>- Martin, 25. März 2024</p>
+    </div>
     <div class="slide-text no-review">
       <p>Hier könnte Ihre Bewertung sein</p>
     </div>
