added a review to all screen sizes

--- a/src/components/SlideshowEventList1Img.astro
+++ b/src/components/SlideshowEventList1Img.astro
@@ -163,6 +163,19 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
   </div>
 
+  <!-- slide 12 -->
+  <div class="slide-mobile">
+    <div class="slide-text">
+      <p>
+        Die Massagen sind super bei Elena. Sie geht individuell auf die
+        Bedürfnisse ein, löst die Verspannungen und schafft jedes mal eine
+        entspannte Atmosphäre. Ich fühle mich jedes mal wie neugeboren und kann
+        Elena wärmstens weiterempfehlen.
+      </p>
+      <p>- Barbara, 27. März 2024</p>
+    </div>
+  </div>
+
   <!-- Control buttons -->
   <button class="btn-m btn-next-m">
     <Icon name="fa-solid:chevron-right" class="btn-icon" />
