--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -130,9 +130,18 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
       </p>
       <p>- Martin, 25. März 2024</p>
     </div>
-    <div class="slide-text slide-text-empty">
-      <p>Hier könnte Ihre Bewertung sein</p>
+    <div class="slide-text">
+      <p>
+        Die Massagen sind super bei Elena. Sie geht individuell auf die
+        Bedürfnisse ein, löst die Verspannungen und schafft jedes mal eine
+        entspannte Atmosphäre. Ich fühle mich jedes mal wie neugeboren und kann
+        Elena wärmstens weiterempfehlen.
+      </p>
+      <p>- Barbara, 27. März 2024</p>
     </div>
+    <!-- <div class="slide-text slide-text-empty">
+      <p>Hier könnte Ihre Bewertung sein</p>
+    </div> -->
   </div>
 
   <!-- Control buttons -->
