--- a/src/components/SlideshowEventList1Img.astro
+++ b/src/components/SlideshowEventList1Img.astro
@@ -15,7 +15,7 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
 <div class="slider-mobile">
   <!-- slide 1 -->
   <div class="slide-mobile" id="slide1">
-    <div class="slide-text">
+    <div class="slide-text-vertical-center">
       <div>
         <p>
           Zu Elena gehe ich immer sehr gerne in die Massage. Die Session ist
@@ -31,26 +31,31 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
 
   <!-- slide 2 -->
   <div class="slide-mobile" id="slide2">
-    <div class="slide-text">
-      <p>
-        Hallo liebe Elena. Ich gehe jedesmal völlig entspannt bei dir aus der
-        Massage. Sobald ich eine Verspannung oder ähnliche Probleme habe gehst
-        du darauf ein und versuchst es zu lösen. Der Wohlfühlfaktor ist bei dir
-        einfach gegeben und du weisst was du tust. 👌🏻 Ich komme immer wieder
-        gern zu dir mach weiter so. Liebe Grüsse Claudia
-      </p>
-      <p>- Claudia, 11. Mai 2023</p>
+    <div class="slide-text-vertical-center">
+      <div>
+        <p>
+          Hallo liebe Elena. Ich gehe jedesmal völlig entspannt bei dir aus der
+          Massage. Sobald ich eine Verspannung oder ähnliche Probleme habe gehst
+          du darauf ein und versuchst es zu lösen. Der Wohlfühlfaktor ist bei
+          dir einfach gegeben und du weisst was du tust. 👌🏻 Ich komme immer
+          wieder gern zu dir mach weiter so. Liebe Grüsse Claudia
+        </p>
+        <p>- Claudia, 11. Mai 2023</p>
+      </div>
     </div>
   </div>
 
   <!-- slide 3 -->
   <div class="slide-mobile">
-    <div class="slide-text">
-      <p>
-        Absolut entspannende, verspannungslösende Massage bei Elena! Sie trifft
-        die richtigen Punkte mit dem richtigen Druck. Komme immer wieder gerne.
-      </p>
-      <p>- Sylvie, 11. Mai 2023</p>
+    <div class="slide-text-vertical-center">
+      <div>
+        <p>
+          Absolut entspannende, verspannungslösende Massage bei Elena! Sie
+          trifft die richtigen Punkte mit dem richtigen Druck. Komme immer
+          wieder gerne.
+        </p>
+        <p>- Sylvie, 11. Mai 2023</p>
+      </div>
     </div>
   </div>
 
@@ -176,6 +181,39 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
   </div>
 
+  <!-- slide 13 -->
+  <div class="slide-mobile">
+    <div class="slide-text">
+      <p>
+        Elena ist sehr kompetent, engagiert und empathisch - vor der Massage
+        erfolgt eine kurze "Aufnahme" der körperlichen Situation - nach der
+        Massage gibt sie wertvolle Tipps zur Selbst-Hilfe - während der Massage
+        ist sie im guten Kontakt und findet so die richtige Intensität. Sehr zu
+        empfehlen.
+      </p>
+      <p>- Gernot, 19. Juli 2024</p>
+    </div>
+  </div>
+
+  <!-- slide 14 -->
+  <div class="slide-mobile">
+    <div class="slide-text">
+      <p>
+        Hat mir gut gefallen. Elena hat zugehört, was ich brauche und die
+        Massage entsprechend ausgerichtet. Sehr entspannend. Danke!
+      </p>
+      <p>- Kiki, 19. April 2024</p>
+    </div>
+  </div>
+
+  <!-- slide 15 -->
+  <div class="slide-mobile">
+    <div class="slide-text">
+      <p>Sehr professionell. Ich kann es nur empfehlen. Danke</p>
+      <p>- Magdalena, 19. April 2024</p>
+    </div>
+  </div>
+
   <!-- Control buttons -->
   <button class="btn-m btn-next-m">
     <Icon name="fa-solid:chevron-right" class="btn-icon" />
@@ -258,12 +296,24 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
 
   .slide-text {
     width: 100%;
+    /* display: flex;
+    align-items: center; */
     background-color: rgba(255, 255, 255, 0.674);
     padding: 20px;
     border-radius: 4px;
   }
 
-  .slide-text :first-child {
+  .slide-text-vertical-center {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.674);
+    padding: 20px;
+    border-radius: 4px;
+  }
+
+  .slide-text :first-child,
+  .slide-text-vertical-center :first-child {
     padding-bottom: 10px;
   }
 
