--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -196,8 +196,18 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
     <div class="slide-text">
       <div>
-        <p>Sehr professionell. Ich kann es nur empfehlen. Danke</p>
-        <p>- Magdalena, 19. April 2024</p>
+        <div>
+          <p>Sehr professionell. Ich kann es nur empfehlen. Danke</p>
+          <p>- Magdalena, 19. April 2024</p>
+        </div>
+        <br />
+        <div>
+          <p>
+            Super freundlich, sehr kompetent und engagiert! Werde nun
+            regelmässig zu ihr gehen!!
+          </p>
+          <p>- Raphael, 29. März 2024</p>
+        </div>
       </div>
     </div>
     <!-- <div class="slide-text slide-text-empty">
