added all reviews to tablet and desktop versions

--- a/src/components/SlideshowEventList2Img.astro
+++ b/src/components/SlideshowEventList2Img.astro
@@ -1,13 +1,5 @@
 ---
 import { Icon } from "astro-icon";
-export interface Props {
-  slideImg1: string;
-  slideImg2: string;
-  slideImg3: string;
-  slideImg4: string;
-}
-
-const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
 ---
 
 <!-- Slider container -->
@@ -175,9 +167,6 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
         <p>- Barbara, 27. März 2024</p>
       </div>
     </div>
-    <!-- <div class="slide-text no-review">
-      <p>Hier könnte Ihre Bewertung sein</p>
-    </div> -->
   </div>
 
   <!-- slide 7 -->
@@ -203,38 +192,93 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
         <p>- Kiki, 19. April 2024</p>
       </div>
     </div>
-    <!-- <div class="slide-text no-review">
-      <p>Hier könnte Ihre Bewertung sein</p>
-    </div> -->
   </div>
 
   <!-- slide 8 -->
   <div class="slide-tablet">
     <div class="slide-text">
       <div>
-        <div>
-          <p>Sehr professionell. Ich kann es nur empfehlen. Danke</p>
-          <p>- Magdalena, 19. April 2024</p>
-        </div>
-        <br />
-        <div>
-          <p>
-            Super freundlich, sehr kompetent und engagiert! Werde nun
-            regelmässig zu ihr gehen!!
-          </p>
-          <p>- Raphael, 29. März 2024</p>
-        </div>
+        <p>Sehr professionell. Ich kann es nur empfehlen. Danke</p>
+        <p>- Magdalena, 19. April 2024</p>
       </div>
     </div>
-    <!-- <div class="slide-text">
+    <div class="slide-text">
+      <div>
+        <p>Danke Elena für die sehr wohltuende und entspannende Massage!</p>
+        <p>- Lukasz, 15. Dezember 2023</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- slide 9 -->
+  <div class="slide-tablet">
+    <div class="slide-text">
       <div>
         <p>
-          Hat mir gut gefallen. Elena hat zugehört, was ich brauche und die
-          Massage entsprechend ausgerichtet. Sehr entspannend. Danke!
+          Sehr empfehlenswert. Elena hat viel Erfahrung und eine Behandlung bei
+          ihr tut einem einfach rundum gut.
         </p>
-        <p>- Kiki, 19. April 2024</p>
+        <p>- Teresa, 18. Dezember 2023</p>
       </div>
-    </div> -->
+    </div>
+    <div class="slide-text">
+      <div>
+        <p>Sehr angenehm. Elena ist sehr kompetent und freundlich.</p>
+        <p>- Melanie, 1. Februar 2024</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- slide 10 -->
+  <div class="slide-tablet">
+    <div class="slide-text">
+      <div>
+        <p>
+          Sehr angenehm und hat gut geholfen, gegen meine sehr starken
+          Verspannungen.
+        </p>
+        <p>- Nuria, 12. Januar 2024</p>
+      </div>
+    </div>
+    <div class="slide-text">
+      <div>
+        <p>
+          Super freundlich, sehr kompetent und engagiert! Werde nun regelmässig
+          zu ihr gehen!!
+        </p>
+        <p>- Raphael, 29. März 2024</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- slide 11 -->
+  <div class="slide-tablet">
+    <div class="slide-text">
+      <div>
+        <p>Super entspannend !</p>
+        <p>- Andreas, 2. Februar 2024</p>
+      </div>
+    </div>
+    <div class="slide-text">
+      <div>
+        <p>Wunderbar entspannend! Danke!</p>
+        <p>- Sylvia, 16. Februar 2024</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- slide 12 -->
+  <div class="slide-tablet">
+    <div class="slide-text">
+      <div>
+        <p>
+          Die Behandlung war top und ich habe gute Tipps für den Alltag erhalten
+          - vielen Dank!
+        </p>
+        <p>- Regula, 5. Januar 2024</p>
+      </div>
+    </div>
+
     <div class="slide-text no-review">
       <p>Hier könnte Ihre Bewertung sein</p>
     </div>
