--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -1,18 +1,21 @@
 ---
 import { Icon } from "astro-icon";
-export interface Props {
-  slideImg1: string;
-  slideImg2: string;
-  slideImg3: string;
-  slideImg4: string;
-}
+import Review from "./Review.astro";
+import json from "../data/reviews.json";
 
-const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
+const dataDesktop = json;
 ---
 
 <!-- Slider container -->
 <div class="slider-desktop">
   <!-- slide 1 -->
+
+  <!-- {
+    dataDesktop.map((review) => (
+      <Review name={review.name} date={review.date} text={review.text} />
+    ))
+  } -->
+
   <div class="slide">
     <div class="slide-text">
       <div>
@@ -166,9 +169,6 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
         <p>- Barbara, 27. März 2024</p>
       </div>
     </div>
-    <!-- <div class="slide-text slide-text-empty">
-      <p>Hier könnte Ihre Bewertung sein</p>
-    </div> -->
   </div>
 
   <!-- slide 5 -->
@@ -196,23 +196,89 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
     <div class="slide-text">
       <div>
-        <div>
-          <p>Sehr professionell. Ich kann es nur empfehlen. Danke</p>
-          <p>- Magdalena, 19. April 2024</p>
-        </div>
-        <br />
-        <div>
-          <p>
-            Super freundlich, sehr kompetent und engagiert! Werde nun
-            regelmässig zu ihr gehen!!
-          </p>
-          <p>- Raphael, 29. März 2024</p>
-        </div>
+        <p>Sehr professionell. Ich kann es nur empfehlen. Danke</p>
+        <p>- Magdalena, 19. April 2024</p>
       </div>
     </div>
-    <!-- <div class="slide-text slide-text-empty">
+  </div>
+
+  <!-- slide 6 -->
+  <div class="slide">
+    <div class="slide-text">
+      <div>
+        <p>Danke Elena für die sehr wohltuende und entspannende Massage!</p>
+        <p>- Lukasz, 15. Dezember 2023</p>
+      </div>
+    </div>
+    <div class="slide-text">
+      <div>
+        <p>
+          Sehr empfehlenswert. Elena hat viel Erfahrung und eine Behandlung bei
+          ihr tut einem einfach rundum gut.
+        </p>
+        <p>- Teresa, 18. Dezember 2023</p>
+      </div>
+    </div>
+    <div class="slide-text">
+      <div>
+        <div>
+          <p>Sehr angenehm. Elena ist sehr kompetent und freundlich.</p>
+          <p>- Melanie, 1. Februar 2024</p>
+        </div>
+        <br />
+      </div>
+    </div>
+  </div>
+
+  <!-- slide 7 -->
+  <div class="slide">
+    <div class="slide-text">
+      <div>
+        <p>
+          Sehr angenehm und hat gut geholfen, gegen meine sehr starken
+          Verspannungen.
+        </p>
+        <p>- Nuria, 12. Januar 2024</p>
+      </div>
+    </div>
+    <div class="slide-text">
+      <div>
+        <p>
+          Super freundlich, sehr kompetent und engagiert! Werde nun regelmässig
+          zu ihr gehen!!
+        </p>
+        <p>- Raphael, 29. März 2024</p>
+      </div>
+    </div>
+    <div class="slide-text">
+      <div>
+        <p>
+          Die Behandlung war top und ich habe gute Tipps für den Alltag erhalten
+          - vielen Dank!
+        </p>
+        <p>- Regula, 5. Januar 2024</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- slide 8 -->
+  <div class="slide">
+    <div class="slide-text">
+      <div>
+        <p>Super entspannend !</p>
+        <p>- Andreas, 2. Februar 2024</p>
+      </div>
+    </div>
+    <div class="slide-text">
+      <div>
+        <p>Wunderbar entspannend! Danke!</p>
+        <p>- Sylvia, 16. Februar 2024</p>
+      </div>
+    </div>
+
+    <div class="slide-text slide-text-empty">
       <p>Hier könnte Ihre Bewertung sein</p>
-    </div> -->
+    </div>
   </div>
 
   <!-- Control buttons -->
@@ -367,17 +433,5 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
   }
 
   @media (max-width: 600px) {
-    /* .slider-desktop {
-            display: none;
-        }
-
-        .slider-mobile {
-            display: block;
-            width: 100%;
-            /* max-width: 800px; */
-    /* height: 300px;
-            position: relative;
-            overflow: hidden;
-        } */
   }
 </style>
