Added revies to desctop and tablet versions

--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -276,6 +276,78 @@ const dataDesktop = json;
       </div>
     </div>
 
+    <div class="slide-text">
+      <div>
+        <p>
+          Sehr angenehm, Elena ist komplett auf meine Beschwerden eingegangen.
+          Vielen lieben Dank nochmals dafür!
+        </p>
+        <p>- Léonie, 31. Januar 2025</p>
+      </div>
+    </div>
+
+    <!-- <div class="slide-text slide-text-empty">
+      <p>Hier könnte Ihre Bewertung sein</p>
+    </div> -->
+  </div>
+
+  <!-- slide 9 -->
+  <div class="slide">
+    <div class="slide-text">
+      <div>
+        <p>
+          Der Termin bei Elena war wie immer sehr empfehlenswert, auch mit guten
+          Tipps für den Alltag
+        </p>
+        <p>- Ruth, 10. Januar 2025</p>
+      </div>
+    </div>
+    <div class="slide-text">
+      <div>
+        <p>
+          Sehr gut, Frau Schaller ist wirklich super auf meine Rückenbeschwerden
+          eingegangen und hat mir den Rücken hervorragend gelöst. Ich war sehr
+          zufrieden. Danke!
+        </p>
+        <p>- Sabrina, 13. Dezember 2024</p>
+      </div>
+    </div>
+    <div class="slide-text">
+      <div>
+        <p>
+          Ein Doppeltermin bei Elena wirkt Wunder; sie ist einfach TOP! Danke
+          aber auch an das gesamte Team.
+        </p>
+        <p>- Jacqueline, 29. November 2024</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- slide 10 -->
+  <div class="slide">
+    <div class="slide-text">
+      <div>
+        <p>
+          Sehr gut. Top Erklärungen kombiniert mit perfekter Massage und einem
+          sehr positiven Effekt danach.
+        </p>
+        <p>- Jan Vincent, 23. August 2024</p>
+      </div>
+    </div>
+    <div class="slide-text">
+      <div>
+        <p>
+          Elena ist nicht nur technisch eine gute Masseurin, sie hat zudem eine
+          gute Menschenkenntnis und spürt den Menschen, den Geist und den
+          Körper. Mein Körper und mein Geist fühlen sich nach jeder Massage
+          besser an, da Elena während der gesamten Sitzung einen ausgewogenen,
+          angemessenen Druck ausübt und diesen auch jedes Mal individuell nach
+          meiner Tagesform und meinem Körperbefinden automatisch anpasst.
+        </p>
+        <p>- Liza, 22. April 2025</p>
+      </div>
+    </div>
+
     <div class="slide-text slide-text-empty">
       <p>Hier könnte Ihre Bewertung sein</p>
     </div>
